--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="nav-wrap container">
         <div class="brand">
           <div class="logo">
-            <img src="./img/logo-smk-1-5.png" alt="Logo SMKN1TP" class="logo-img" />
+            <img src="https://iqivucpnxgtagxmhxehc.supabase.co/storage/v1/object/sign/Logo/LogoSMK.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV82MzRhMzVhNy0yOTUxLTRlOWUtOWQzZi1hYjZjNTA3YWE2MDUiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJMb2dvL0xvZ29TTUsucG5nIiwiaWF0IjoxNzYyODQzOTI5LCJleHAiOjE3OTQzNzk5Mjl9.rYtgUFr9M3bZ1_vnr1E5a-S7LnRtUa5XUq8XES_LWdg" alt="Logo SMKN1TP" class="logo-img" />
           </div>
           <div class="brand-text">
             <h1>SMKN1TP</h1>
@@ -441,3 +441,4 @@
     </script>
   </body>
 </html>
+
